--- a/InstPect/package.json
+++ b/InstPect/package.json
@@ -11,10 +11,21 @@
     "clean": "tsc --build --clean"
   },
   "devDependencies": {
+    "@types/connect-redis": "0.0.15",
+    "@types/express": "^4.17.9",
     "@types/node": "^8.0.14",
+    "express-validations": "^2.2.3",
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "compression": "^1.7.4",
+    "connect-history-api-fallback": "^1.6.0",
+    "connect-redis": "^5.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.7.0",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.29"
   }
 }
