--- a/InstPect/tsconfig.json
+++ b/InstPect/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "strict": false,
     "module": "commonjs",
     "target": "es6",
     "lib": [ "es6" ],
