--- a/InstPect/package.json
+++ b/InstPect/package.json
@@ -18,6 +18,7 @@
     "typescript": "^3.2.2"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.0",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
     "connect-redis": "^5.0.0",
@@ -26,6 +27,7 @@
     "express-validator": "^6.7.0",
     "handy-redis": "^1.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.16",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
   }
