--- a/InstPect/package.json
+++ b/InstPect/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@types/connect-redis": "0.0.15",
     "@types/express": "^4.17.9",
-    "@types/node": "^8.0.14",
+    "@types/node": "^14.14.12",
     "express-validations": "^2.2.3",
     "typescript": "^3.2.2"
   },
@@ -26,6 +26,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.7.0",
     "handy-redis": "^1.5.1",
+    "instagram-private-api": "^1.43.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.16",
     "reflect-metadata": "^0.1.13",
