--- a/InstPect/package.json
+++ b/InstPect/package.json
@@ -23,7 +23,8 @@
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
     "connect-redis": "^5.0.0",
-    "express": "^4.17.1",
+    "cron": "^1.8.2",
+    "express": "^4.16.4",
     "express-session": "^1.17.1",
     "express-validator": "^6.7.0",
     "handy-redis": "^1.5.1",
