--- a/InstPect/package.json
+++ b/InstPect/package.json
@@ -14,6 +14,7 @@
     "@types/connect-redis": "0.0.15",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.12",
+    "console-warn": "0.0.4",
     "express-validations": "^2.2.3",
     "typescript": "^3.2.2"
   },
@@ -22,6 +23,8 @@
     "@types/nodemailer": "^6.4.0",
     "compression": "^1.7.4",
     "connect-redis": "^5.0.0",
+    "console-error": "0.0.4",
+    "console-info": "0.0.5",
     "cron": "^1.8.2",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
